Fixed styling on footer, centered, and stuck to bottom.  Changed base application name in MY_COntroller

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -20,17 +20,19 @@ body {
     background-attachment: fixed;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
     font-family: 'Violence';
     text-shadow: 2px 2px #444444;
     color: #FFF;
 }
 
 footer {
+    z-index: 99999;
     background-color: rgba(0, 0, 0, 0.3);
     position: absolute;
     bottom: 0;
-    height: 60px;
+    padding: 10px 0 5px 0;
+    width: 100%;
 }
 
 nav {
